<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.smartbear.soapui</groupId>
  <artifactId>soapui-project</artifactId>
  <name>SoapUI project</name>
    <version>5.6.2-kimholan</version>
  <packaging>pom</packaging>

  <repositories>
    <repository>
      <id>smartbear-sweden-repository</id>
      <url>http://www.soapui.org/repository/maven2</url>
    </repository>
  </repositories>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

    <!-- Custom properties -->
    <assembly.build.directory>${project.build.directory}/assemblies</assembly.build.directory>
    <installer.build.directory>${project.build.directory}/install4j</installer.build.directory>
    <build.date>${maven.build.timestamp}</build.date>

    <project.name.full>SoapUI-${project.version}</project.name.full>
    <project.name.visible>SoapUI</project.name.visible>
    <project.src.artifactId>soapui</project.src.artifactId>

    <javafx.version>2.2</javafx.version>
    <!-- Set this property to the location of your JavaFX runtime jar if you want to compile with Java 6 -->
    <javafx.runtime.lib.jar>${java.home}/lib/jfxrt.jar</javafx.runtime.lib.jar>
  </properties>



  <profiles>
    <profile>
      <id>soapui</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <modules>
        <module>soapui</module>
        <module>soapui-installer</module>
        <module>soapui-system-test</module>
      </modules>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-clean-plugin</artifactId>
            <version>2.5</version>
            <configuration>
              <filesets>
                <fileset>
                  <directory>${project.basedir}</directory>
                  <includes>
                    <include>*.log</include>
                  </includes>
                  <followSymlinks>false</followSymlinks>
                </fileset>
              </filesets>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.0</version>
            <configuration>
              <source>11</source>
              <target>11</target>
              <compilerArgs>
                <arg>--module-path</arg>
                <arg>/home/developer/lib/javafx-sdk-11.0.2/lib</arg>
                <arg>--add-modules</arg>
                <arg>javafx.controls,javafx.fxml,javafx.web,javafx.swing</arg>
              </compilerArgs>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>2.8.1</version>
            <configuration>
              <maxmemory>1024m</maxmemory>
              <additionalparam>-Xdoclint:none</additionalparam>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>xmlbeans</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <modules>
        <module>soapui-xmlbeans</module>
      </modules>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-clean-plugin</artifactId>
            <version>2.5</version>
            <configuration>
              <filesets>
                <fileset>
                  <directory>${project.basedir}</directory>
                  <includes>
                    <include>*.log</include>
                  </includes>
                  <followSymlinks>false</followSymlinks>
                </fileset>
              </filesets>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.0</version>
            <configuration>
              <source>8</source>
              <target>8</target>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>2.8.1</version>
            <configuration>
              <maxmemory>1024m</maxmemory>
              <additionalparam>-Xdoclint:none</additionalparam>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>


</project>
